--- a/index.html
+++ b/index.html
@@ -92,6 +92,85 @@ Join thousands of young professionals and tech enthusiasts who start their day w
 
          </section>
 
+         <!-- why choose us -->
+          <section class="bg-[#230E3D]" >
+            <div class="choose-content container">
+                <h2 class="section-title pt-28 mb-6">Why Chooes TechWave</h2>
+
+
+            <div class="features grid grid-cols-1 md:grid-cols-3 gap-4">
+  <div class="features-card 
+              bg-[#24104a] 
+              rounded-2xl 
+              py-28
+              px-8 
+              text-white 
+              shadow-lg 
+              row-span-2
+              ">
+    <img src="assets/headphone.png" alt="" class="w-11 my-6">
+    <h2 class="text-lg font-semibold mb-2">Premium Audio Quality</h2>
+    <p class="text-sm text-gray-300 leading-relaxed">
+     Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.
+    </p>
+  </div>
+
+  <div class="features-card 
+              bg-[#24104a] 
+              rounded-2xl 
+              p-6 
+              text-white 
+              shadow-lg 
+              col-span-2
+             ">
+    <img src="assets/device.png" alt="" class="w-11 mb-4">
+    <h2 class="text-lg font-semibold">Mobile Friendly</h2>
+    <p class="text-sm text-gray-300 leading-relaxed">Listen on the go with seamless mobile experience and offline downloads.
+    </p>
+  </div>
+
+  <div class="features-card 
+              bg-[#24104a] 
+              rounded-2xl 
+              p-6 
+              text-white 
+              shadow-lg 
+              col-span-2
+              ">
+    <img src="assets/location.png" alt="" class="w-11 mb-4">
+    <h2 class="text-lg font-semibold">Global Community</h2>
+    <p class="text-sm text-gray-300 leading-relaxed">
+      Connect with tech enthusiasts from over 120 countries worldwide.
+    </p>
+  </div>
+
+  
+  <div class="features-card 
+              bg-[#24104a] 
+              rounded-2xl 
+              p-6 
+              text-white 
+              shadow-lg 
+              col-span-2">
+    <img src="assets/headphone.png" alt="" class="w-11 mb-4">
+    <h2 class="text-lg font-semibold mb-2">Exclusive Interviews</h2>
+    <p class="text-sm text-gray-300 leading-relaxed">
+      Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
+    </p>
+  </div>
+
+  <div class="features-card bg-[#24104a] rounded-2xl p-6 text-white shadow-lg">
+    <img src="assets/resource.png" alt="" class="w-11 mb-4">
+    <h2 class="text-lg font-semibold">Rich Resources</h2>
+    <p class="text-sm text-gray-300 leading-relaxed">Access show notes, transcripts, and additional learning materials for every episode.
+    </p>
+  </div>
+
+            </div>
+
+            </div>
+          </section>
+
       </main>
 
       <!-- footer Start -->
