episodes section added

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Join thousands of young professionals and tech enthusiasts who start their day w
               text-white 
               shadow-lg 
               col-span-2">
-    <img src="assets/headphone.png" alt="" class="w-11 mb-4">
+    <img src="assets/exclusive.png" alt="" class="w-11 mb-4">
     <h2 class="text-lg font-semibold mb-2">Exclusive Interviews</h2>
     <p class="text-sm text-gray-300 leading-relaxed">
       Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
@@ -170,6 +170,47 @@ Join thousands of young professionals and tech enthusiasts who start their day w
 
             </div>
           </section>
+
+          <!-- Episodes section-->
+           <section class="bg-[#1A0B2E]">
+            <div class="episode-content container">
+                <h2 class="section-title pt-28 mb-10">Featured Episodes</h2>
+
+            <div class="episode-items grid grid-cols-1 md:grid-cols-3 gap-4">
+
+                <div class="episode-card border rounded-2xl ">
+                    <iframe class="shadow-2xl border-0 outline-0 rounded-t-2xl w-full h-60" src="https://www.youtube.com/embed/i4laq6e_B6U?si=y1GKimLLpIdh9PEL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <div class="bg-[#250D44] space-y-4 p-4 ">
+                        <h2 class="text-white text-2xl font-bold">Complete Guideline to be a web developer</h2>
+                    <p class="text-white">Learn HTML, CSS, and JavaScript, practice responsive design, use Git/GitHub, build real projects, learn a framework (React), understand basics of backend & APIs, and keep learning continuously.</p>
+                    <p class="text-[#00FF88]"><i class="fa-solid fa-clock"></i>12 min</p>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="episode-card border rounded-2xl">
+                    <iframe class="shadow-2xl border-0 outline-0 rounded-t-2xl w-full h-60" src="https://www.youtube.com/embed/zOjov-2OZ0E?si=Wf6TGjNUcaRd6SMy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <div class="bg-[#250D44] space-y-4 p-4 h-fit">
+                        <h2 class="text-white text-2xl font-bold">Introduction to Programming and Computer Science</h2>
+                    <p class="text-white">Learn HTML, CSS, and JavaScript, practice responsive design, use Git/GitHub, build real projects, learn a framework (React), understand basics of backend & APIs, and keep learning continuously.</p>
+                    <p class="text-[#00FF88]"><i class="fa-solid fa-clock"></i>1 hour 59 min</p>
+                    </div>
+                </div>
+                <!--  -->
+                <div class="episode-card border rounded-2xl">
+                   <iframe class="shadow-2xl border-0 outline-0 rounded-t-2xl w-full h-60" src="https://www.youtube.com/embed/JUwePydwbUI?si=1ebspM5p2jDc_vjw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <div class="bg-[#250D44] space-y-4 p-4 ">
+                        <h2 class="text-white text-2xl font-bold">Is it possible to become a web developer in six months?</h2>
+                    <p class="text-white">Learn HTML, CSS, and JavaScript, practice responsive design, use Git/GitHub, build real projects, learn a framework (React), understand basics of backend & APIs, and keep learning continuously.</p>
+                    <p class="text-[#00FF88]"><i class="fa-solid fa-clock"></i>9 min</p>
+                    </div>
+                </div>
+                <!--  -->
+            
+
+            </div>
+            </div>
+
+           </section>
 
       </main>
 
