updated style added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ EKhon eder parent ke flex items center justify center korlei circle bg ta center
 Note: proper width ar margin padding use korle figma r moto position e asbe
          -->
 
-         <section class="bg-[url('/assets/hero-bg.png')] min-h-[600px] md:min-h-[760px] w-full bg-no-repeat bg-cover bg-center pt-8">
+         <section class="bg-[url('./assets/hero-bg.png')] min-h-[600px] md:min-h-[760px] w-full bg-no-repeat bg-cover bg-center pt-8">
             <div class="flex flex-col justify-center items-center">
                 <div class="flex justify-center items-center flex-col">
                   <img class="relative w-80 md:w-96" src="assets/hero-circle.png" alt="">
@@ -426,7 +426,7 @@ Join thousands of young professionals and tech enthusiasts who start their day w
 
 <!-- Footer start -->
  <!-- min-h-[600px] md:min-h-[760px] w-full bg-no-repeat bg-cover bg-center -->
-      <footer class="bg-[url('/assets/footer-bg.png')] w-full min-h-[206px] md:min-h-[412px] bg-no-repeat bg-cover bg-center pt-20">
+      <footer class="bg-[url('./assets/footer-bg.png')] w-full min-h-[206px] md:min-h-[412px] bg-no-repeat bg-cover bg-center pt-20">
  
 
   <div class=" flex flex-col items-center justify-center text-center px-4 py-16">
