updated style added

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ Join thousands of young professionals and tech enthusiasts who start their day w
 
   
 
-            <div class="podcast-record text-white border-t-[#8b8b8b] mt-20 py-20 grid gap-6 grid-cols-2 md:grid-cols-4">
+            <div class="podcast-record text-white border-t border-t-[#888888]  mt-20 py-20 grid gap-6 grid-cols-2 md:grid-cols-4">
                 
                 <div class="record">
                     <h3 class="text-5xl font-extrabold text-[#00FF88]">150K+</h3>
